# TransUNet-Pancreas-Segmentation

./: .gitignore  01_Data_Exploration_and_Processing.ipynb  02_Model_Architecture.ipynb  03_Training_Pipeline.ipynb  README.md  index.html  main.py  pyproject.toml
assets/: README.md  architecture_diagram.txt
docs/: CHANGELOG.md  DEPLOY.md  FIX_LATEX_ERROR.md  QUICKSTART.md  README_LATEX.md
infra/: README.md  ec2-training-instance.yaml
notebooks/: 01_Data_Exploration_and_Processing.ipynb  02_Model_Architecture.ipynb  03_Training_Pipeline.ipynb  04_Evaluation_and_Demo.ipynb
paper/: Research Paper.tex  paper.tex  proposal.out  proposal.tex  references.bib
scripts/: Makefile  clean.ps1  compile.ps1  compile_simple.ps1  download_dataset.py  install_latex_packages.ps1
src/: __init__.py  dataset.py  loss.py  model.py  transforms.py  utils.py
