[project]
name = "pancreas-segmentation"
version = "0.1.0"
description = "TransUNet implementation for automated pancreas segmentation from CT scans using deep learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "monai>=1.5.1",
    "nibabel>=5.3.3",
    "scikit-learn>=1.8.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
]
